# cec2uinput

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  build.rs  cec2uinput.service  config.example.yaml  config.yaml  test_device.rs
.github/workflows/: aur.yml  debian.yml  release.yml
AUR/: .SRCINFO  PKGBUILD  PKGBUILD.in
config/: cec2uinput.service  config.yml
debian/: cec2uinput.install  changelog  control  copyright  rules
src/: cec_shim.cpp  linux.rs  macos.rs  main.rs
tools/: cec_troubleshoot.sh
