[package]
name = "cec2uinput"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml_ng = "0.10.0"
anyhow = "1.0.99"
log = "0.4.27"
env_logger = "0.11.8"

cec-rs = "12.0.0"
mouse-keyboard-input = { git = "https://github.com/positiveway/mouse-keyboard-input", branch = "main" }
clap = { version = "4.5.45", features = ["derive"] }

[profile.release]
lto = "fat"

